--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.102",
     "@nuxt/devtools": "latest",
     "@types/node": "^18",
+    "@unocss/nuxt": "^0.55.0",
     "@vueuse/core": "^10.2.1",
     "@vueuse/nuxt": "^10.2.1",
-    "nuxt": "^3.6.1"
+    "nuxt": "^3.6.5"
+  },
+  "dependencies": {
+    "@unocss/reset": "^0.55.0"
   }
 }
